[tool.poetry]
name = "spotviz"
version = "0.0.1"
description = "Various Visualization Tools"
authors = ["wol4aravio <panovskiy.v@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
