[tool.poetry]
name = "spotviz"
version = "0.0.1"
description = "Various Visualization Tools"
authors = ["wol4aravio <panovskiy.v@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
rope = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
